adding personal portfolio

--- a/index.html
+++ b/index.html
@@ -1,1 +1,214 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <script src="https://use.fontawesome.com/21c239b2a4.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link rel="stylesheet" href="master.css" media="screen" title="no title">
+    <script type="text/javascript"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <title>Julie DeMasters | Full Stack Developer</title>
+  </head>
+  <body>
+    <header>
+      <ul class="blueheader">
+        <li class="right"><a href="#Contact" ><span class="headerlinks">Contact</span></a></li>
+        <li class="right"><a href="#Projects"><span class="headerlinks">Projects</span></a></li>
+        <li class="right"><a href="#About" ><span class="headerlinks">About</span></a></li>
+      </ul>
+    </header>
+
+    <!-- <div class="parallax1">
+      <div id="circleblue">
+      </div>
+        <div id="personaltitle">
+          <div id="name">
+          <h1>Julie DeMasters</h1>
+          <h2>Full-Stack Web Developer</h2>
+        </div>
+        </div>
+      <div class="parallaxblur"></div>
+    </div> -->
+    <div class="parallax1">
+    </div>
+      <div id="circleblue">
+      </div>
+      <div id="personaltitle">
+      </div>
+      <div id="name">
+        <h1 id="namej">Julie DeMasters</h1>
+        <h2 id="namef">Full Stack Website Developer</h2>
+      </div>
+      <div class="downarrow"><i class="material-icons" style="font-size:90px">keyboard_arrow_down</i></div>
+      <div class="parallaxblur"></div>
+    <div class="yearsexp">
+      <a name="About"></a>
+
+      <div class="titleongoing">
+        <span id="aboutmetext">About Me</span>
+      </div>
+      <div class="ongoingproj">
+        <h2 id="education">Education</h2>
+        <ul>
+          <ul class="educa">Galvanize- Denver Platte | May - October 2016</ul>
+          <ul class="educa">University of Denver, Master's New Media and Internet Marketing | January 2014 - March 2016</ul>
+          <ul class="educa">Calvin College, B.A. Business Administration - Marketing, Spanish Minor | August 2007 - May 2011</ul>
+        </ul>
+      </div>
+    </div>
+
+    <div class="parallax2">
+      <div class="colored">
+        <h1 id="skillstitle">Technical Skills</h1>
+        <div class="skillscolumn">
+          <h2>Tools</h2>
+          <ul>
+            <li>PostgreSQL</li>
+            <li>AJAX</li>
+            <li>AngularJS</li>
+            <li>Git</li>
+            <li>Express</li>
+            <li>Heroku</li>
+            <li>Knex.js</li>
+          </ul>
+          <br>
+          <h2>Languages</h2>
+          <ul>
+            <li>JavaScript</li>
+            <li>HTML5</li>
+            <li>CSS</li>
+            <li>SQL</li>
+          </ul>
+          <br>
+          <h2>Techniques</h2>
+          <ul>
+            <li>API integration</li>
+            <li>Test driven development</li>
+            <li>Pivotal Tracker</li>
+            <li>Agile</li>
+          </ul>
+        </div>
+      </div>
+      <div class="overwords">
+        <p>test</p>
+    </div>
+      <!-- <div class="imgcolor"><span id=""></span></div> -->
+      <!-- <div class="">
+        <object  id="obj" type="text/html" data="https://mywinsapp.herokuapp.com/" width="800px" height="460px" style="overflow:auto;">
+    </object>
+      </div> -->
+    </div>
+    <div class="projectsimg">
+      <div class="">
+        word here i am
+      </div>
+    </div>
+
+
+    <a name="Projects"></a>
+    <div class="parallax4">
+      <div class="projectstitle">
+        <h1 id="fewproj">A Few Projects</h1>
+      </div>
+    </div>
+    <div class="parallax3">
+      <div class="descmywins">blue</div>
+      <!-- <div class="websitemywins"> -->
+        <div class="descmywinssite">
+          <!-- below is live site -->
+          <object  id="obj" type="text/html" data="https://mywinsapp.herokuapp.com/" width="100%" height="460px" style="overflow:auto;">
+          </object>
+
+        </div>
+      <!-- </div> -->
+      <div class="">
+        <span id=""></span>
+      </div>
+    </div>
+    <div class="projectimages">
+      <div class="projscreenshot">
+        <img class="projimgsize"  src="images/EaTown.png" alt="" />
+        <h1 class="projtitle">EaTown</h1>
+        <p>Get restaurant recommendations based upon your city search. Technology used: Zomato API, JavaScript, HTML5, and CSS3.</p>
+        <p>  <a target="_blank" href="https://github.com/JulieDeM" class=""><i style="color:#4B927C;" class="fa fa-github-square" aria-hidden="true"></i></a></p>
+      </div>
+      <div class="projscreenshot">
+        <img class="projimgsize"  src="images/CyprusDashboard.png" alt="" />
+        <h1 class="projtitle">Cyprus Copper Mugs Dashboard</h1>
+        <p style="padding-left: 2%;">Client project that pulls Google Analytics and Facebook Insights data into a basic dashboard.
+        Technology used: AngularJS, JavaScript, HTML5, CSS3, Facebook Insights API, and Google Analytics API.</p>
+      </div>
+      <!-- <div style="margin-right: 2%;" class="projscreenshot">
+        <img class="projimgsize"  src="images/mywins.png" alt="" />
+        <h1 class="projtitle">EaTs</h1>
+        <p></p>
+      </div> -->
+    </div>
+    <div class="projectsimg">
+      <div style="margin-right: 2%;" class="projscreenshot2">
+        <img class="projimgsize"  src="images/mywins.png" alt="" />
+        <h1 class="projtitle">EaTs</h1>
+        <p>word</p>
+      </div>
+      <div style="margin-right: 2%;" class="projscreenshot2">
+        <img class="projimgsize"  src="images/mywins.png" alt="" />
+        <h1 class="projtitle">EaTs</h1>
+        <p>word</p>
+      </div>
+      <!-- <div class="">
+        word
+      </div> -->
+    </div>
+
+    <a name="Contact"></a>
+    <div class="parallax5">
+      <span id="snow">
+      <div id="titlecontact">I am available for full time work in Denver, Colorado.
+      <br>Please reach out, I would love to work with you!</div>
+      <div class=""></div>
+      <div class="">
+        <span id="">
+          <form class="contactform" action="mailto:juliekdemasters@gmail.com" method="post" enctype="text/plain">
+            <input type="text" name="Your Name" placeholder="Enter Your Name">
+            <!-- <textarea type="text" name="Your E-Mail " placeholder="Please Let Me know"> </textarea> -->
+            <input type="text" name="name" value="" placeholder="Let me know">
+            <input id="emailmebutton" type="submit" value="E-Mail Me">
+          </form>
+        </span>
+        </span>
+      </div>
+
+    </div>
+    <div class="furthercontact">
+      here i go i will have some thing there
+    </div>
+    <div class="somethi">
+      <span id="sitemap">
+      something
+      </span>
+    </div>
+
+    <div class="footer">
+    </div>
+      <div class="socialicons">
+        <span id="sociallinks">
+        <a target="_blank" href="https://github.com/JulieDeM" class=""><i class="fa fa-github-square" aria-hidden="true"></i></a>
+
+        <a target="_blank" href="https://www.linkedin.com/in/juliedemasters"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+
+        <a target="_blank" href="tel:+7202738460"><i class="fa fa-phone" aria-hidden="true"></i></a>
+
+        <a href="mailto:juliekdemasters@gmail.com?subject=Inquiry about services - Portfolio Reference"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+
+        <a target="_blank" href="https://goo.gl/SjZEs5">  <i class="fa fa-id-card-o" aria-hidden="true"></i></a>
+
+        <a target="_blank" href="https://goo.gl/gFR5ij"><i class="fa fa-download" aria-hidden="true"></i></a>
+
+        </span>
+      </div>
+
+
+
+  </body>
+</html>
