added link to downarrow

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1 id="namej">Julie DeMasters</h1>
         <h2 id="namef">Full Stack Website Developer</h2>
       </div>
-      <div class="downarrow"><i class="material-icons" style="font-size:90px">keyboard_arrow_down</i></div>
+      <div class="downarrow"><a href="#About" ><i class="material-icons" style="font-size:90px">keyboard_arrow_down</i></a></div>
       <div class="parallaxblur"></div>
     <div class="yearsexp">
       <a name="About"></a>
