added styling and about section, moved education down

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="master.css" media="screen" title="no title">
     <script type="text/javascript"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <title>Julie DeMasters | Full Stack Developer</title>
+    <title>Julie DeMasters | Full Stack Web Developer</title>
   </head>
   <body>
     <header>
@@ -46,15 +46,24 @@
       <a name="About"></a>
 
       <div class="titleongoing">
-        <span id="aboutmetext">About Me</span>
+        <div id="borderboxabout">
+          <h2 id="aboutmetext">About Me</h2>
+        </div>
+        <!-- <span id="aboutmetext">About Me</span> -->
       </div>
       <div class="ongoingproj">
-        <h2 id="education">Education</h2>
+        <p style="font-size:20px;">
+          Full Stack Web Developer with experience in JavaScript, HTML5, CSS3, API integration, PostgreSQL, Knex.js, Express, AngularJS, Heroku, and Firebase. Eager to learn new languages and technologies, with demonstrated ability to do so on a tight timeline.
+          <br>
+          <br>
+          Over 3+ years in the technology industry with experience in Agile workflow, UI/UX research and insight, and A/B testing.
+        </p>
+        <!-- <h2 id="education">Education</h2>
         <ul>
           <ul class="educa">Galvanize- Denver Platte | May - October 2016</ul>
           <ul class="educa">University of Denver, Master's New Media and Internet Marketing | January 2014 - March 2016</ul>
           <ul class="educa">Calvin College, B.A. Business Administration - Marketing, Spanish Minor | August 2007 - May 2011</ul>
-        </ul>
+        </ul> -->
       </div>
     </div>
 
@@ -91,7 +100,12 @@
         </div>
       </div>
       <div class="overwords">
-        <p>test</p>
+        <h2 id="education">Education</h2>
+        <ul>
+          <ul class="educa">Galvanize- Denver Platte | May - October 2016</ul>
+          <ul class="educa">University of Denver, Master's New Media and Internet Marketing | January 2014 - March 2016</ul>
+          <ul class="educa">Calvin College, B.A. Business Administration - Marketing, Spanish Minor | August 2007 - May 2011</ul>
+        </ul>
     </div>
       <!-- <div class="imgcolor"><span id=""></span></div> -->
       <!-- <div class="">
