working on styling website

--- a/index.html
+++ b/index.html
@@ -114,8 +114,16 @@
       </div> -->
     </div>
     <div class="projectsimg">
-      <div class="">
-        word here i am
+      <div class="flexmainpoints">
+        <div class="mainpoints">
+          <p class="wordpoint">hey</p>
+        </div>
+        <div class="mainpoints">
+          <p class="wordpoint">neat</p>
+        </div>
+        <div class="mainpoints">
+          <p>hiay</p>
+        </div>
       </div>
     </div>
 
