removed unneccessary information on website

--- a/index.html
+++ b/index.html
@@ -58,18 +58,14 @@
           <br>
           Over 3+ years in the technology industry with experience in Agile workflow, UI/UX research and insight, and A/B testing.
         </p>
-        <!-- <h2 id="education">Education</h2>
-        <ul>
-          <ul class="educa">Galvanize- Denver Platte | May - October 2016</ul>
-          <ul class="educa">University of Denver, Master's New Media and Internet Marketing | January 2014 - March 2016</ul>
-          <ul class="educa">Calvin College, B.A. Business Administration - Marketing, Spanish Minor | August 2007 - May 2011</ul>
-        </ul> -->
       </div>
     </div>
 
     <div class="parallax2">
       <div class="colored">
         <h1 id="skillstitle">Technical Skills</h1>
+      </div>
+      <div class="overwords">
         <div class="skillscolumn">
           <h2>Tools</h2>
           <ul>
@@ -98,14 +94,6 @@
             <li>Agile</li>
           </ul>
         </div>
-      </div>
-      <div class="overwords">
-        <h2 id="education">Education</h2>
-        <ul>
-          <ul class="educa">Galvanize- Denver Platte | May - October 2016</ul>
-          <ul class="educa">University of Denver, Master's New Media and Internet Marketing | January 2014 - March 2016</ul>
-          <ul class="educa">Calvin College, B.A. Business Administration - Marketing, Spanish Minor | August 2007 - May 2011</ul>
-        </ul>
     </div>
       <!-- <div class="imgcolor"><span id=""></span></div> -->
       <!-- <div class="">
@@ -113,7 +101,7 @@
     </object>
       </div> -->
     </div>
-    <div class="projectsimg">
+    <!-- <div class="projectsimg">
       <div class="flexmainpoints">
         <div class="mainpoints">
           <p class="wordpoint">hey</p>
@@ -125,7 +113,7 @@
           <p>hiay</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
     <a name="Projects"></a>
@@ -202,9 +190,9 @@
       </div>
 
     </div>
-    <div class="furthercontact">
+    <!-- <div class="furthercontact">
       here i go i will have some thing there
-    </div>
+    </div> -->
     <div class="somethi">
       <span id="sitemap">
       something
