cleaning up and simplifying website

--- a/index.html
+++ b/index.html
@@ -18,18 +18,6 @@
         <li class="right"><a href="#About" ><span class="headerlinks">About</span></a></li>
       </ul>
     </header>
-
-    <!-- <div class="parallax1">
-      <div id="circleblue">
-      </div>
-        <div id="personaltitle">
-          <div id="name">
-          <h1>Julie DeMasters</h1>
-          <h2>Full-Stack Web Developer</h2>
-        </div>
-        </div>
-      <div class="parallaxblur"></div>
-    </div> -->
     <div class="parallax1">
     </div>
       <div id="circleblue">
@@ -60,6 +48,7 @@
         </p>
       </div>
     </div>
+    <div class="linecolor"> <font><hr></font></div>
 
     <div class="parallax2">
       <div class="colored">
