added a few languages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 
     <div class="parallax2">
       <div class="colored">
-        <h1 id="skillstitle">Technical Skills</h1>
+        <!-- <h1 id="skillstitle">Technical Skills</h1> -->
+        <div id="borderboxtech">
+          <h2 id="techtext">Technical Skills</h2>
+        </div>
       </div>
       <div class="overwords">
         <div class="skillscolumn">
@@ -72,7 +75,9 @@
             <li>JavaScript</li>
             <li>HTML5</li>
             <li>CSS</li>
-            <li>SQL</li>
+            <li>postgreSQL</li>
+            <li>mySQL</li>
+            <li></li>
           </ul>
           <br>
           <h2>Techniques</h2>
@@ -80,7 +85,7 @@
             <li>API integration</li>
             <li>Test driven development</li>
             <li>Pivotal Tracker</li>
-            <li>Agile</li>
+            <li>Agile development</li>
           </ul>
         </div>
     </div>
