--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             <li>JavaScript</li>
             <li>HTML5</li>
             <li>CSS</li>
-            <li>postgreSQL</li>
-            <li>mySQL</li>
-            <li></li>
+            <li>SQL</li>
+            <li>Python</li>
+            <li>C#</li>
           </ul>
           <br>
           <h2>Techniques</h2>
