--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
         </div>
       </div>
       <div class="overwords">
-        <div class="skillscolumn">
-          <h2>Tools</h2>
+        <div class="skillscolumn" >
+          <!-- <h2>Tools</h2> -->
           <ul>
+            <h2>Tools</h2>
             <li>PostgreSQL</li>
             <li>AJAX</li>
             <li>AngularJS</li>
@@ -70,8 +71,8 @@
             <li>Knex.js</li>
           </ul>
           <br>
-          <h2>Languages</h2>
           <ul>
+            <h2>Languages</h2>
             <li>JavaScript</li>
             <li>HTML5</li>
             <li>CSS</li>
@@ -80,8 +81,8 @@
             <li>C#</li>
           </ul>
           <br>
-          <h2>Techniques</h2>
           <ul>
+            <h2>Techniques</h2>
             <li>API integration</li>
             <li>Test driven development</li>
             <li>Pivotal Tracker</li>
