--- a/index.html
+++ b/index.html
@@ -118,7 +118,19 @@
       </div>
     </div>
     <div class="parallax3">
-      <div class="descmywins">blue</div>
+      <div class="descmywins">
+        <h1 id="mywinstitle">MyWins.com</h1>
+        <div class="mywinswords">
+
+        <p>
+          MyWins is an amateur gaming website that allows users to track their wins and losses. Users can record Foosball, Ping Pong, Kan Jam, Cards, Cornhole and Spikeball scores through a user intuitive website.
+          <br>
+          <br>
+          The website app was built with JavaScript, AngularJS, Facebook Oauth, CSS3, and HTML5.
+        </p>
+        <p>  <a target="_blank" href="https://github.com/JulieDeM" class=""><i style="color:#4B927C;" class="fa fa-github-square" aria-hidden="true"></i></a></p>
+      </div>
+      </div>
       <!-- <div class="websitemywins"> -->
         <div class="descmywinssite">
           <!-- below is live site -->
