updated styling to the contact me section

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div class="projscreenshot">
         <img class="projimgsize"  src="images/CyprusDashboard.png" alt="" />
         <h1 class="projtitle">Cyprus Copper Mugs Dashboard</h1>
-        <p style="padding-left: 2%;">Client project that pulls Google Analytics and Facebook Insights data into a basic dashboard.
+        <p style="padding-left: 2%; padding-right:2%; overflow: hidden;">Client project that pulls Google Analytics and Facebook Insights data into a basic dashboard.
         Technology used: AngularJS, JavaScript, HTML5, CSS3, Facebook Insights API, and Google Analytics API.</p>
       </div>
       <!-- <div style="margin-right: 2%;" class="projscreenshot">
@@ -181,8 +181,11 @@
     <a name="Contact"></a>
     <div class="parallax5">
       <span id="snow">
-      <div id="titlecontact">I am available for full time work in Denver, Colorado.
-      <br>Please reach out, I would love to work with you!</div>
+        <p id="titlecontact">
+          Contact Me
+        </p>
+      <!-- <div id="titlecontact">I am available for full time work in Denver, Colorado.
+      <br>Please reach out, I would love to work with you!</div> -->
       <div class=""></div>
       <div class="">
         <span id="">
