updated contact form styling

--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
       <span id="snow">
         <p id="titlecontact">
           Contact Me
+          <!-- <hr id="contactmehr"> -->
+          <div id="contactmehr"></div>
         </p>
       <!-- <div id="titlecontact">I am available for full time work in Denver, Colorado.
       <br>Please reach out, I would love to work with you!</div> -->
@@ -190,9 +192,9 @@
       <div class="">
         <span id="">
           <form class="contactform" action="mailto:juliekdemasters@gmail.com" method="post" enctype="text/plain">
-            <input type="text" name="Your Name" placeholder="Enter Your Name">
+            <input class="textemail" type="text" name="Your Name" placeholder="Enter Your Name">
             <!-- <textarea type="text" name="Your E-Mail " placeholder="Please Let Me know"> </textarea> -->
-            <input type="text" name="name" value="" placeholder="Let me know">
+            <input class="textemail" type="text" name="name" value="" placeholder="Let me know">
             <input id="emailmebutton" type="submit" value="E-Mail Me">
           </form>
         </span>
