added TeaShoppe to projects

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
     </div>
     <div class="projectsimg">
       <div style="margin-right: 2%;" class="projscreenshot2">
-        <img class="projimgsize"  src="images/mywins.png" alt="" />
-        <h1 class="projtitle">EaTs</h1>
+        <img class="projimgsize"  src="images/teashoppe.png" alt="TeaShoppe AngularJS Website" />
+        <h1 class="projtitle">TeaShoppe</h1>
         <p>word</p>
       </div>
       <div style="margin-right: 2%;" class="projscreenshot2">
@@ -205,11 +205,11 @@
     <!-- <div class="furthercontact">
       here i go i will have some thing there
     </div> -->
-    <div class="somethi">
+    <!-- <div class="somethi">
       <span id="sitemap">
       something
       </span>
-    </div>
+    </div> -->
 
     <div class="footer">
     </div>
