adjusted snowfall in css

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       </div>
       <div style="margin-right: 2%;" class="projscreenshot2">
         <img class="projimgsize"  src="images/mywins.png" alt="" />
-        <h1 class="projtitle">EaTs</h1>
+        <h1 class="projtitle">Puzzletastic</h1>
         <p>word</p>
       </div>
       <!-- <div class="">
