form styling updated

--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
           <form class="contactform" action="mailto:juliekdemasters@gmail.com" method="post" enctype="text/plain">
             <input class="textemail" type="text" name="Your Name" placeholder="Enter Your Name">
             <!-- <textarea type="text" name="Your E-Mail " placeholder="Please Let Me know"> </textarea> -->
-            <input class="textemail" type="text" name="name" value="" placeholder="Let me know">
+            <!-- <input class="textemail" type="comment" name="Your Email" value="" placeholder="Enter Your Message"> -->
+            <input class="textemail" type="comment" name="Your Email" value="" placeholder="Enter Your Message">
             <input id="emailmebutton" type="submit" value="E-Mail Me">
           </form>
         </span>
