updated the description of teashoppe

--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
     </div>
     <div class="projectimages">
       <div class="projscreenshot">
-        <img class="projimgsize"  src="images/EaTown.png" alt="" />
+        <img class="projimgsize"  src="images/EaTown.png" alt="API focused JavaScript App" />
         <h1 class="projtitle">EaTown</h1>
         <p>Get restaurant recommendations based upon your city search. Technology used: Zomato API, JavaScript, HTML5, and CSS3.</p>
         <p>  <a target="_blank" href="https://github.com/JulieDeM" class=""><i style="color:#4B927C;" class="fa fa-github-square" aria-hidden="true"></i></a></p>
       </div>
       <div class="projscreenshot">
-        <img class="projimgsize"  src="images/CyprusDashboard.png" alt="" />
+        <img class="projimgsize"  src="images/CyprusDashboard.png" alt="AngularJS Analytics Dashboard" />
         <h1 class="projtitle">Cyprus Copper Mugs Dashboard</h1>
         <p style="padding-left: 2%; padding-right:2%; overflow: hidden;">Client project that pulls Google Analytics and Facebook Insights data into a basic dashboard.
         Technology used: AngularJS, JavaScript, HTML5, CSS3, Facebook Insights API, and Google Analytics API.</p>
@@ -166,7 +166,9 @@
       <div style="margin-right: 2%;" class="projscreenshot2">
         <img class="projimgsize"  src="images/teashoppe.png" alt="TeaShoppe AngularJS Website" />
         <h1 class="projtitle">TeaShoppe</h1>
-        <p>word</p>
+        <p>TeaShoppe is a basic shopping cart store.
+          Technology used: AngularJS, JavaScript, HTML5, and CSS3.
+        </p>
       </div>
       <div style="margin-right: 2%;" class="projscreenshot2">
         <img class="projimgsize"  src="images/mywins.png" alt="" />
