updated project descriptions and basic css

--- a/index.html
+++ b/index.html
@@ -165,15 +165,18 @@
     <div class="projectsimg">
       <div style="margin-right: 2%;" class="projscreenshot2">
         <img class="projimgsize"  src="images/teashoppe.png" alt="TeaShoppe AngularJS Website" />
-        <h1 class="projtitle">TeaShoppe</h1>
-        <p>TeaShoppe is a basic shopping cart store.
+        <!-- <h1 class="projtitle">TeaShoppe</h1> -->
+        <h1 class="projtitle2">TeaShoppe</h1>
+        <p class="projdesc">TeaShoppe is a basic shopping cart store.
           Technology used: AngularJS, JavaScript, HTML5, and CSS3.
         </p>
       </div>
       <div style="margin-right: 2%;" class="projscreenshot2">
         <img class="projimgsize"  src="images/mywins.png" alt="" />
-        <h1 class="projtitle">Puzzletastic</h1>
-        <p>word</p>
+        <h1 class="projtitle2">Puzzletastic</h1>
+        <p class="projdesc">Small video game arcade website.
+          Technology used: Built with Unity3D, knex.js, JavaScript, postgreSQL, HTML5, Facebook oAuth and CSS3.
+        </p>
       </div>
       <!-- <div class="">
         word
