--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
         </p>
       </div>
       <div style="margin-right: 2%;" class="projscreenshot2">
-        <img class="projimgsize"  src="images/mywins.png" alt="" />
+        <img class="projimgsize"  src="images/cat-game.png" alt="" />
         <h1 class="projtitle2">Puzzletastic</h1>
-        <p class="projdesc">Small video game arcade website.
+        <p class="projdesc">Small video game arcade website. Three games were built, one by each team member.
           Technology used: Built with Unity3D, knex.js, JavaScript, postgreSQL, HTML5, Facebook oAuth and CSS3.
         </p>
       </div>
