added mywins github simple link

--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
           MyWins is an amateur gaming website that allows users to track their wins and losses. Users can record Foosball, Ping Pong, Kan Jam, Cards, Cornhole and Spikeball scores through a user intuitive website.
           <br>
           <br>
-          The website app was built with JavaScript, AngularJS, Facebook Oauth, CSS3, and HTML5.
+          The website app was built with JavaScript, AngularJS, Facebook Oauth, CSS3, and HTML5. <br> <br> <a href="https://github.com/JulieDeM/MyWins">MyWins on GitHub</a>
         </p>
-        <p>  <a target="_blank" href="https://github.com/JulieDeM" class=""><i style="color:#4B927C;" class="fa fa-github-square" aria-hidden="true"></i></a></p>
+        <!-- <p>  <a target="_blank" href="https://github.com/JulieDeM" class=""><i style="color:#4B927C;" class="fa fa-github-square" aria-hidden="true"></i></a></p> -->
+
       </div>
       </div>
       <!-- <div class="websitemywins"> -->
