--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
           <br>
           <br>
           The website app was built with JavaScript, AngularJS, Facebook Oauth, CSS3, and HTML5. <br> <br> <a href="https://github.com/JulieDeM/MyWins">MyWins on GitHub</a>
+          <br>  <br>  <a href="http://mywinsapp.com/">MyWinsapp.com</a>
         </p>
         <!-- <p>  <a target="_blank" href="https://github.com/JulieDeM" class=""><i style="color:#4B927C;" class="fa fa-github-square" aria-hidden="true"></i></a></p> -->
 
