--- a/index.html
+++ b/index.html
@@ -149,9 +149,12 @@
       <div class="projscreenshot">
         <img class="projimgsize"  src="images/EaTown.png" alt="API focused JavaScript App" />
         <h1 class="projtitle">EaTown</h1>
-        <p>Get restaurant recommendations based upon your city search. Technology used: Zomato API, JavaScript, HTML5, and CSS3.</p>
-        <br> <br> <a href="https://github.com/JulieDeM/EaTown-Restaurant-Finder">EaTown on GitHub</a>
-        <br>  <br>  <a href="https://first-page-q1-project.firebaseapp.com/index.html">EaTown Website</a>
+        <p>Get restaurant recommendations based upon your city search. Technology used: Zomato API, JavaScript, HTML5, and CSS3.
+          <br> <br> <a href="https://github.com/JulieDeM/EaTown-Restaurant-Finder">EaTown on GitHub</a>
+          <br>  <br>  <a href="https://first-page-q1-project.firebaseapp.com/index.html">EaTown Website</a>
+        </p>
+        <!-- <br> <br> <a href="https://github.com/JulieDeM/EaTown-Restaurant-Finder">EaTown on GitHub</a>
+        <br>  <br>  <a href="https://first-page-q1-project.firebaseapp.com/index.html">EaTown Website</a> -->
         <br>
         <!-- <p>  <a target="_blank" href="https://github.com/JulieDeM" class=""><i style="color:#4B927C;" class="fa fa-github-square" aria-hidden="true"></i></a></p> -->
       </div>
