added github link to cyprus copper mugs

--- a/index.html
+++ b/index.html
@@ -161,7 +161,10 @@
         <img class="projimgsize"  src="images/CyprusDashboard.png" alt="AngularJS Analytics Dashboard" />
         <h1 class="projtitle">Cyprus Copper Mugs Dashboard</h1>
         <p style="padding-left: 3%; padding-right:3%; overflow: hidden;">Client project that pulls Google Analytics and Facebook Insights data into a basic dashboard.
-        Technology used: AngularJS, JavaScript, HTML5, CSS3, Facebook Insights API, and Google Analytics API.</p>
+        Technology used: AngularJS, JavaScript, HTML5, CSS3, Facebook Insights API, and Google Analytics API.
+        <!-- <br> <br> As this was a client project and they asked the website to be private there is no access to the website, however, you can <a href="https://github.com/JulieDeM/Copper-Mugs-Dashboard">view the code on GitHub here.</a> -->
+        <br> <br> <a href="https://github.com/JulieDeM/Copper-Mugs-Dashboard">Cyprus Copper Mugs Dashboard on GitHub</a>  |   Access to Website Private (per request)
+        </p>
       </div>
       <!-- <div style="margin-right: 2%;" class="projscreenshot">
         <img class="projimgsize"  src="images/mywins.png" alt="" />
