added resume and github links above

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <br>
           <br>
           Over 3+ years in the technology industry with experience in Agile workflow, UI/UX research and insight, and A/B testing.
+          <br> <br> <a target="_blank" href="https://github.com/JulieDeM">GitHub Account</a>   ||   <a target="_blank" href="https://goo.gl/gFR5ij">Resume</a>
         </p>
       </div>
     </div>
@@ -126,8 +127,8 @@
           MyWins is an amateur gaming website that allows users to track their wins and losses. Users can record Foosball, Ping Pong, Kan Jam, Cards, Cornhole and Spikeball scores through a user intuitive website.
           <br>
           <br>
-          The website app was built with JavaScript, AngularJS, Facebook Oauth, CSS3, and HTML5. <br> <br> <br> <a href="https://github.com/JulieDeM/MyWins">MyWins on GitHub</a>
-            ||     <a href="http://mywinsapp.com/">MyWinsapp.com</a>
+          The website app was built with JavaScript, AngularJS, Facebook Oauth, CSS3, and HTML5. <br> <br> <br> <a target="_blank" href="https://github.com/JulieDeM/MyWins">MyWins on GitHub</a>
+            ||     <a target="_blank" href="http://mywinsapp.com/">MyWinsapp.com</a>
         </p>
         <!-- <p>  <a target="_blank" href="https://github.com/JulieDeM" class=""><i style="color:#4B927C;" class="fa fa-github-square" aria-hidden="true"></i></a></p> -->
 
@@ -150,7 +151,7 @@
         <img class="projimgsize"  src="images/EaTown.png" alt="API focused JavaScript App" />
         <h1 class="projtitle">EaTown</h1>
         <p>Get restaurant recommendations based upon your city search. Technology used: Zomato API, JavaScript, HTML5, and CSS3.
-          <br> <br> <a href="https://github.com/JulieDeM/EaTown-Restaurant-Finder">EaTown on GitHub</a>   ||   <a href="https://first-page-q1-project.firebaseapp.com/index.html">EaTown Website</a>
+          <br> <br> <a target="_blank" href="https://github.com/JulieDeM/EaTown-Restaurant-Finder">EaTown on GitHub</a>   ||   <a target="_blank" href="https://first-page-q1-project.firebaseapp.com/index.html">EaTown Website</a>
         </p>
         <!-- <br> <br> <a href="https://github.com/JulieDeM/EaTown-Restaurant-Finder">EaTown on GitHub</a>
         <br>  <br>  <a href="https://first-page-q1-project.firebaseapp.com/index.html">EaTown Website</a> -->
@@ -163,7 +164,7 @@
         <p style="padding-left: 3%; padding-right:3%; overflow: hidden;">Client project that pulls Google Analytics and Facebook Insights data into a basic dashboard.
         Technology used: AngularJS, JavaScript, HTML5, CSS3, Facebook Insights API, and Google Analytics API.
         <!-- <br> <br> As this was a client project and they asked the website to be private there is no access to the website, however, you can <a href="https://github.com/JulieDeM/Copper-Mugs-Dashboard">view the code on GitHub here.</a> -->
-        <br> <br> <a href="https://github.com/JulieDeM/Copper-Mugs-Dashboard">Cyprus Copper Mugs Dashboard on GitHub</a>  ||   Access to Website Private (per request)
+        <br> <br> <a target="_blank" href="https://github.com/JulieDeM/Copper-Mugs-Dashboard">Cyprus Copper Mugs Dashboard on GitHub</a>  ||   Access to Website Private (per request)
         </p>
       </div>
       <!-- <div style="margin-right: 2%;" class="projscreenshot">
@@ -179,7 +180,7 @@
         <h1 class="projtitle2">TeaShoppe</h1>
         <p class="projdesc">TeaShoppe is a basic shopping cart store.
           Technology used: AngularJS, JavaScript, HTML5, and CSS3.
-          <br> <br> <a href="https://github.com/JulieDeM/MeanTEA-Shopping-Website">TeaShoppe on GitHub</a>
+          <br> <br> <a target="_blank" href="https://github.com/JulieDeM/MeanTEA-Shopping-Website">TeaShoppe on GitHub</a>
         </p>
       </div>
       <div style="margin-right: 2%;" class="projscreenshot2">
@@ -187,7 +188,7 @@
         <h1 class="projtitle2">Puzzletastic</h1>
         <p class="projdesc">Small video game arcade website. Three games were built, one by each team member.
           Technology used: Built with Unity3D, knex.js, JavaScript, postgreSQL, HTML5, Facebook oAuth and CSS3.
-          <br> <br> <a href="https://github.com/JulieDeM/Unity-Project">Puzzletastic on GitHub</a>
+          <br> <br> <a target="_blank" href="https://github.com/JulieDeM/Unity-Project">Puzzletastic on GitHub</a>
         </p>
       </div>
       <!-- <div class="">
