added LinkedIn above

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <br>
           <br>
           Over 3+ years in the technology industry with experience in Agile workflow, UI/UX research and insight, and A/B testing.
-          <br> <br> <a target="_blank" href="https://github.com/JulieDeM">GitHub Account</a>   ||   <a target="_blank" href="https://goo.gl/gFR5ij">Resume</a>
+          <br> <br> <a target="_blank" href="https://github.com/JulieDeM">GitHub Account</a>   ||   <a target="_blank" href="https://goo.gl/gFR5ij">Resume</a>   ||   <a target="_blank" href="https://www.linkedin.com/in/juliedemasters">LinkedIn</a>
         </p>
       </div>
     </div>
