added seo meta descriptions

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Full Stack Software Developer in greater Denver area.">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript,AngularJS,PostgreSQL,SQL,knex.js,Express,API Integration,JSON,Git,AJAX">
+    <meta name="author" content="Julie DeMasters">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://use.fontawesome.com/21c239b2a4.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
