--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="Full Stack Software Developer in greater Denver area.">
@@ -13,6 +13,7 @@
     <script type="text/javascript"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Julie DeMasters | Full Stack Web Developer</title>
+    <link rel="shortcut icon" href="images/JulieDeMasters.ico"/>
   </head>
   <body>
     <header>
@@ -53,7 +54,9 @@
         </p>
       </div>
     </div>
-    <div class="linecolor"> <font><hr></font></div>
+    <!-- <div class="linecolor"> <font><hr></font></div> -->
+    <div class="linecolor"><hr></div>
+
 
     <div class="parallax2">
       <div class="colored">
@@ -188,7 +191,7 @@
         </p>
       </div>
       <div style="margin-right: 2%;" class="projscreenshot2">
-        <img class="projimgsize"  src="images/cat-game.png" alt="" />
+        <img class="projimgsize"  src="images/cat-game.png" alt="Unity3D Puzzletastic Website" />
         <h1 class="projtitle2">Puzzletastic</h1>
         <p class="projdesc">Small video game arcade website. Three games were built, one by each team member.
           Technology used: Built with Unity3D, knex.js, JavaScript, postgreSQL, HTML5, Facebook oAuth and CSS3.
