--- a/index.html
+++ b/index.html
@@ -216,12 +216,14 @@
       <div class=""></div>
       <div class="">
         <span id="">
-          <form class="contactform" action="mailto:juliekdemasters@gmail.com" method="post" enctype="text/plain">
-            <input class="textemail" type="text" name="Your Name" placeholder="Enter Your Name">
+          <form id="ajax-contact" method="post" action="http://www.juliedemasters.io/php/mailer.php">
+            <input class="textemail" type="text" id="nameField" name="Your Name" placeholder="Enter Your Name">
             <!-- <textarea type="text" name="Your E-Mail " placeholder="Please Let Me know"> </textarea> -->
             <!-- <input class="textemail" type="comment" name="Your Email" value="" placeholder="Enter Your Message"> -->
-            <input class="textemail" type="comment" name="Your Email" value="" placeholder="Enter Your Message">
-            <input id="emailmebutton" type="submit" value="E-Mail Me">
+            <input type="text" name="" id="subjectField" value="">
+            <input type="text" id="message" name="" value="">
+            <input class="textemail" id="emailField" type="comment" name="Your Email" value="" placeholder="Enter Your Message">
+            <input id="submit" type="submit" value="E-Mail Me">
           </form>
         </span>
         </span>
