updated contact form

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class=""></div>
       <div class="">
         <span id="">
-          <form id="ajax-contact" method="post" action="http://www.juliedemasters.io/php/mailer.php">
+          <form id="ajax-contact" method="post" action="https://juliedem.github.io/php/mailer.php">
             <input class="textemail" type="text" id="nameField" name="Your Name" placeholder="Enter Your Name">
             <!-- <textarea type="text" name="Your E-Mail " placeholder="Please Let Me know"> </textarea> -->
             <!-- <input class="textemail" type="comment" name="Your Email" value="" placeholder="Enter Your Message"> -->
@@ -225,6 +225,7 @@
             <input class="textemail" id="emailField" type="comment" name="Your Email" value="" placeholder="Enter Your Message">
             <input id="submit" type="submit" value="E-Mail Me">
           </form>
+            <div id="form-messages"></div>
         </span>
         </span>
       </div>
@@ -261,4 +262,11 @@
 
 
   </body>
+  <script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+  <script type="text/javascript" src="js/app.js">
+
+  </script>
 </html>
