using formspree to forward emails

--- a/index.html
+++ b/index.html
@@ -216,14 +216,14 @@
       <div class=""></div>
       <div class="">
         <span id="">
-          <form id="ajax-contact" method="post" action="php/mailer.php">
+          <form id="ajax-contact" method="post" action="https://formspree.io/juliedemastersdeveloper@gmail.com">
             <input class="textemail" type="text" id="nameField" name="Your Name" placeholder="Enter Your Name">
             <!-- <textarea type="text" name="Your E-Mail " placeholder="Please Let Me know"> </textarea> -->
             <!-- <input class="textemail" type="comment" name="Your Email" value="" placeholder="Enter Your Message"> -->
             <input type="text" name="" id="subjectField" value="">
             <input type="text" id="message" name="" value="">
-            <input class="textemail" id="emailField" type="comment" name="Your Email" value="" placeholder="Enter Your Message">
-            <input id="submit" type="submit" value="E-Mail Me">
+            <input class="textemail" id="emailField" type="comment" name="_replyto" value="" placeholder="Enter Your Message">
+            <input id="submit" type="submit" value="Send">
           </form>
             <div id="form-messages"></div>
         </span>
