--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class=""></div>
       <div class="">
         <span id="">
-          <form id="ajax-contact" method="post" action="https://formspree.io/juliedemastersdeveloper@gmail.com">
+          <form method="post" action="https://formspree.io/juliedemastersdeveloper@gmail.com">
             <input class="textemail" type="text" id="nameField" name="Your Name" placeholder="Enter Your Name">
             <!-- <textarea type="text" name="Your E-Mail " placeholder="Please Let Me know"> </textarea> -->
             <!-- <input class="textemail" type="comment" name="Your Email" value="" placeholder="Enter Your Message"> -->
