--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <p class="lead text-muted" style="color: white !important;">Full Stack Web Developer with experience in JavaScript, HTML5, CSS3, API integration, PostgreSQL, Knex.js, Express, AngularJS, Heroku, and Firebase. Eager to learn new languages and technologies, with demonstrated ability to do so on a tight timeline.   <br> <br>
             Over 3+ years in the technology industry with experience in Agile workflow, UI/UX research and insight, and A/B testing.</p>
           <p>
-            <h1>Thank you for bearing with me as I am in the process of updating my personal portfolio website.</h1>
+            <!-- <h1>Thank you for bearing with me as I am in the process of updating my personal portfolio website.</h1> -->
 
             <a target="_blank" href="https://goo.gl/gFR5ij" class="btn btn-primary my-2">Resume</a>
             <a target="_blank" href="https://www.linkedin.com/in/juliedemasters" class="btn btn-primary my-2">LinkedIn</a>
@@ -73,6 +73,9 @@
 
       <div class="album py-5 bg-light">
         <div class="container">
+          <p>
+            Notice: I am currently rewritting my personal portfolio. Thank you for visiting my website and bearing with me!
+            - Julie          </p>
             <h1>Selected Projects:</h1>
             <br>
           <div class="row">
